--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="maincard">
 		<h3>Labrador Retriever</h3>
-		<img src="https://github.com/unclefengshu/udacity-project/blob/gh-pages/placeholder.jpg" alt="Labrador Retriever">
+		<img src="https://cdn.pixabay.com/photo/2015/06/11/14/29/labrador-805860_960_720.jpg" alt="Labrador Retriever">
 		<div class="information">
 			<p class="interesting-fact">The Labrador is one of the most popular breeds of dog in many countries as a favourite disability assistance breed.</p>
 			<ul>
