--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="maincard">
 		<h3>Labrador Retriever</h3>
-		<img src="http://img.027cgb.cn/20170505/2017531516639317460.jpg" alt="Labrador Retriever">
+		<img src="placeholder.jpg" alt="Labrador Retriever">
 		<div class="information">
 			<p class="interesting-fact">The Labrador is one of the most popular breeds of dog in many countries as a favourite disability assistance breed.</p>
 			<ul>
